# See https://setuptools.readthedocs.io/en/latest/build_meta.html

[build-system]
# Use setuptools >= 43 because it automatically includes pyproject.toml in source distribution
# Use setuptools >= 46.5 to use attr: package.__version__
# Use setuptools >= 61 for pyproject.toml support
# https://setuptools.readthedocs.io/en/latest/history.html#id284
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratarmount"
version = "0.15.2"
description = "Random Access Read-Only Tar Mount"
authors = [{name = "Maximilian Knespel", email = "mxmlnkn@github.de"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/mxmlnkn/ratarmount"}
dependencies = [
    "ratarmountcore ~= 0.7.0",
    "indexed_gzip >= 1.6.3, < 2.0",
    'indexed_zstd >= 1.3.1, < 2.0; sys_platform=="darwin"',
    'indexed_zstd >= 1.2.2, < 2.0; platform_system!="Windows"',
    'dataclasses; python_version < "3.7.0"',
    "python-xz ~= 0.4.0",
    "rapidgzip >= 0.13.1",
    # Need >= 4.1 because of https://github.com/markokr/rarfile/issues/73
    "rarfile ~= 4.1",
    "libarchive-c ~= 5.1, < 6.0",
    "fast_zip_decryption",
    # Pin to < 3.12 because of https://github.com/nathanhi/pyfatfs/issues/41
    'pyfatfs ~= 1.0; python_version < "3.12.0"',
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
full = ["ratarmountcore[full]"]
bzip2 = ["ratarmountcore[bzip2]"]
gzip = ["ratarmountcore[gzip]"]
rar = ["ratarmountcore[rar]"]
xz = ["ratarmountcore[xz]"]
zip = ["ratarmountcore[zip]"]
zstd = ["ratarmountcore[zstd]"]
squashfs = ["ratarmountcore[squashfs]"]
fsspec = ["ratarmountcore[fsspec]"]

[project.scripts]
ratarmount = "ratarmount:cli"

[tool.setuptools]
py-modules = ["ratarmount"]
license-files = ["LICENSE"]
