# See https://setuptools.readthedocs.io/en/latest/build_meta.html

[build-system]
# Use setuptools >= 43 because it automatically includes pyproject.toml in source distribution
# Use setuptools >= 46.5 to use attr: package.__version__
# Use setuptools >= 61 for pyproject.toml support
# https://setuptools.readthedocs.io/en/latest/history.html#id284
# Use setuptools <= 82 because the license specification changes backward-incompatible in 2026-02.
# https://github.com/pypa/setuptools/issues/4903#issuecomment-2923109576
requires = ["setuptools >= 61, <= 82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratarmount"
description = "Random Access To Archived Resources"
authors = [{name = "Maximilian Knespel", email = "mxmlnknp@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
urls = {Homepage = "https://github.com/mxmlnkn/ratarmount"}
requires-python = ">= 3.7"
dependencies = [
    # https://pip.pypa.io/en/stable/reference/requirement-specifiers/
    # https://packaging.python.org/en/latest/glossary/#term-Requirement-Specifier
    # https://packaging.python.org/en/latest/specifications/dependency-specifiers/#dependency-specifiers
    "ratarmountcore[7z, bzip2, fat, git, gzip, rar, xz, zip, zstd] ~= 0.9.0",
    "mfusepy ~= 1.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
full = ["ratarmountcore[full]"]
bzip2 = ["ratarmountcore[bzip2]"]
gzip = ["ratarmountcore[gzip]"]
rar = ["ratarmountcore[rar]"]
xz = ["ratarmountcore[xz]"]
zip = ["ratarmountcore[zip]"]
zstd = ["ratarmountcore[zstd]"]
squashfs = ["ratarmountcore[squashfs]"]
fsspec = ["ratarmountcore[fsspec-backends]"]

[project.scripts]
ratarmount = "ratarmount.cli:cli"

[tool.setuptools]
packages = ["ratarmount"]
license-files = ["LICENSE"]

[tool.codespell]
# fsspec uses cachable instead of cacheable ...
ignore-words-list = "fo,Nd,unx,cachable"

[tool.setuptools.dynamic]
version = {attr = "ratarmount.version.__version__"}
