[metadata]
name    = ratarmount
version = 0.12.0

description   = Random Access Read-Only Tar Mount
url           = https://github.com/mxmlnkn/ratarmount
author        = Maximilian Knespel
author_email  = mxmlnkn@github.de
license       = MIT
license_files = LICENSE
classifiers   =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Archiving

long_description = file: README.md,
long_description_content_type = text/markdown

[options]
py_modules = ratarmount
install_requires =
    ratarmountcore~=0.4.0
    fusepy
    indexed_bzip2>=1.3.1
    indexed_gzip>=1.6.3
    indexed_zstd>=1.3.1; sys_platform=="darwin"
    indexed_zstd>=1.2.2; platform_system!="Windows"
    dataclasses; python_version < "3.7.0"
    python-xz>=0.4.0
    rarfile>=4.0

[options.extras_require]
full  =
bzip2 =
gzip  =
rar   =
xz    =
zip   =
zstd  =

[options.entry_points]
console_scripts = ratarmount=ratarmount:cli
